--- a/CSS/SCSS/header.scss
+++ b/CSS/SCSS/header.scss
@@ -2,11 +2,12 @@
 // header
 
 .header{
+  width: 100%;
   padding-top: 12px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
 }
+
 
 
 .header__btns {
