--- a/CSS/SCSS/layout.scss
+++ b/CSS/SCSS/layout.scss
@@ -5,10 +5,24 @@ $orange: #e45028;
 $white: #ffffff;
 
 
+.section {
+  min-width: 950px;
+  height: 100vh;
+  min-height: 650px;
+}
 
 .container{
   margin: 0 auto;
   width: 940px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  &--without-align {
+    align-items: initial;
+  }
 }
 
 
@@ -18,27 +32,20 @@ $white: #ffffff;
 
 
 .hero{
-background: url(/IMG-from-maket/backgrounnds/first-screen.png) center center / cover no-repeat;
+background: url(../../IMG-from-maket/backgrounnds/first-screen.png) center center / cover no-repeat;
 }
 
 .whe-are-the-best{
-background: url(/IMG-from-maket/backgrounnds/whe-are.png) center center / cover no-repeat;
-}
-
-/* normalize */
-.section {
-  height: 100vh;
-  min-height: 650px;
-
+background: url(../../IMG-from-maket/backgrounnds/whe-are.png) center center / cover no-repeat;
 }
 
 
+.order {
+  background: url(../../IMG-from-maket/backgrounnds/form_bg.jpg) center center / cover no-repeat;
 
-
-
-.reviewes__page_wrapper{
-  width: 1100px;
-  height: 650px;
-  margin: 0 auto;
-  display: flex;
 }
+
+
+
+
+
