--- a/CSS/SCSS/whe_are.scss
+++ b/CSS/SCSS/whe_are.scss
@@ -1,12 +1,4 @@
 
-.second__page_wrapper{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-
-
 .whe-are_title{
   margin-bottom: 50px;
 
@@ -15,45 +7,40 @@
   }
 }
 
-.reasons__list{
+.reason__list{
   display: flex;
+align-items: center;
 }
 
 
-
-
-
-.reasons__item{
+.reason__item{
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 30%;
-  margin-right: 5%;
+  // width: 30%;
+  // margin-right: 5%;
 }
 
 .reasons__item:last-child{
   margin-right: 0;
 }
 
-.reason_banner{
+.reason__banner{
   margin-bottom: 33px;
 }
-.reason_desc{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.reason__title{
   font-family: 'Lifehack';
   font-size: 24px;
   line-height: 1.17;
   letter-spacing: -0.6px;
   text-align: center;
   color: #2f3234;
+  width: 210px;
 
-  h5{
-    width: 210px;
-  }
+}
 
-  p{
+  .reason__desc{
     opacity: 0.8;
     font-family: 'Ubuntu';
     font-size: 14px;
@@ -64,5 +51,3 @@
     color: rgba(47, 50, 52, 0.8);
   }
 
-
-}
