--- a/CSS/SCSS/form.scss
+++ b/CSS/SCSS/form.scss
@@ -1,8 +1,6 @@
 
-
-
-.order {
-
+.title--orange-title {
+  margin-bottom: 44px;
 }
 
 .form__left, .form__right {
@@ -66,7 +64,7 @@
 
 
 .radiobtns{
-  margin-bottom: 30px;
+  margin-bottom: 7px;
 }
 
 
@@ -143,7 +141,7 @@ color: $white;
 
 
 .checkbox input {
-  position: absolute;
+  position: relative;
   z-index: -1;
   opacity: 0;
   margin: 10px 0 0 20px;
