--- a/CSS/SCSS/layout.scss
+++ b/CSS/SCSS/layout.scss
@@ -1,4 +1,11 @@
 
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  max-width: 1920px;
+}
+
+
 $black:  #2f3234;
 $yellow: #f9b43b;
 $orange: #e45028;
