--- a/CSS/SCSS/title.scss
+++ b/CSS/SCSS/title.scss
@@ -1,8 +1,9 @@
 .title{
   font-family: 'Gagalin';
-  font-size: 72px;
-  line-height: 0.89;
+  font-size: rem(72px);
+  // line-height: 0.89;
   letter-spacing: normal;
+  text-align: center;
   &--orange {
     color: $orange;
   }
