--- a/CSS/SCSS/btns.scss
+++ b/CSS/SCSS/btns.scss
@@ -4,12 +4,24 @@
   color: $white;
   text-decoration: none;
   text-transform: uppercase;
-  border-radius: 5px;
+  border-radius: rem(5px);
   border: none;
-  padding: 10px 15px;
+  padding: rem(10px) rem(15px);
   background-color: $orange;
+  
+  &:hover{
+   background: $orange_btn_hover;
+  }
 
-  &--bg-black {
-    background-color: $black;
+}
+
+// .order_btn:hover{
+//   background: $orange_btn_hover;
+// }
+
+.btn--bg-black {
+  background-color: $black;
+  &:hover {
+    background: $black_btn_hover;
   }
 }
