--- a/CSS/SCSS/form.scss
+++ b/CSS/SCSS/form.scss
@@ -1,13 +1,13 @@
 
 .title--orange-title {
-  margin-bottom: 44px;
+  margin-bottom: rem(44px);
 }
 
 .form__left, .form__right {
   flex: 1;
 }
 
-.form__left { margin-right: 20px; }
+.form__left { margin-right: rem(20px); }
 
 .form {
   width: 100%;
@@ -28,9 +28,9 @@
 
   &__input {
     color: $black;
-    padding: 10px 21px;
-    border-radius: 5px;
-    border: solid 2px;
+    padding: rem(10px) rem(21px);
+    border-radius: rem(5px);
+    border: solid rem(2px);
 
 
     &:focus {
@@ -43,16 +43,16 @@
 
 .form__block {
   flex: 1;
-  margin-bottom: 18px;
+  margin-bottom: rem(18px);
 
-  margin-right: 20px;
+  margin-right: rem(20px);
 
   &:last-child {
     margin-right: 0;
   }
 
   &-title {
-    margin-bottom: 8px;
+    margin-bottom: rem(8px);
   }
 }
 
@@ -64,7 +64,7 @@
 
 
 .radiobtns{
-  margin-bottom: 7px;
+  margin-bottom: rem(7px);
 }
 
 
@@ -85,12 +85,12 @@
 .radiobtns__radio{
   position: absolute;
   top: 0;
-  left: -9999px;
+  left: rem(-9999px);
   
 }
 
 .radiobtns__label-text{
-  margin-right: 20px;
+  margin-right: rem(20px);
 }
 
 
@@ -98,11 +98,11 @@
   display: flex;
 justify-content: center;
 align-items: center;
-  width: 16px;
-  height: 16px;
+  width: rem(16px);
+  height: rem(16px);
   border-radius: 50%;
-  border: 1px solid #c9c9c9 ;
-  margin-right: 10px;
+  border: rem(1px) solid #c9c9c9 ;
+  margin-right: rem(10px);
 
 }
 
@@ -117,12 +117,12 @@ align-items: center;
 }
 
 .radiobtns__radio:checked + .radiobtns__radio-fake::before{
-  width: 6px;
-  height: 6px;
+  width: rem(6px);
+  height: rem(6px);
 }
 
 .radiobtns__radio:checked + .radiobtns__radio-fake{
-  border: 1px solid $orange;
+  border: rem(1px) solid $orange;
 }
 
 
@@ -131,7 +131,7 @@ align-items: center;
 
 
 .check {
-  margin-bottom: 20px;
+  margin-bottom: rem(20px);
 }
 
 
@@ -144,20 +144,20 @@ color: $white;
   position: relative;
   z-index: -1;
   opacity: 0;
-  margin: 10px 0 0 20px;
+  margin: rem(10px) 0 0 rem(20px);
 }
 .checkbox__text {
   position: relative;
-  padding: 0 0 0 50px;
+  padding: 0 0 0 rem(50px);
   cursor: pointer;
 }
 .checkbox__text:before {
   content: '';
   position: absolute;
-  top: -4px;
+  top: rem(-4px);
   left: 0;
-  width: 16px;
-  height: 16px;
+  width: rem(16px);
+  height: rem(16px);
   background: $white;
 }
 
