--- a/CSS/SCSS/layout.scss
+++ b/CSS/SCSS/layout.scss
@@ -1,26 +1,33 @@
+html{
+  font-size: 16px;
+}
+
 
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 1920px;
+  max-width: rem(1920px);
 }
 
 
 $black:  #2f3234;
+$black_btn_hover: #1f2122;
 $yellow: #f9b43b;
 $orange: #e45028;
+$orange_btn_hover: #c1401e;
 $white: #ffffff;
 
 
 .section {
-  min-width: 950px;
+  // min-width: rem(950px);
   height: 100vh;
-  min-height: 650px;
+  min-height: rem(650px);
 }
 
 .container{
   margin: 0 auto;
-  width: 940px;
+  width: 100%;
+  max-width: rem(940px);
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -49,7 +56,10 @@ background: url(../../IMG-from-maket/backgrounnds/whe-are.png) center center / c
 
 .order {
   background: url(../../IMG-from-maket/backgrounnds/form_bg.jpg) center center / cover no-repeat;
+}
 
+.team {
+  background: url(../../IMG-from-maket/backgrounnds/team.jpg) center center / cover no-repeat;
 }
 
 
