--- a/CSS/SCSS/main.scss
+++ b/CSS/SCSS/main.scss
@@ -1,10 +1,21 @@
 
 @import "normalize.scss";
+
+
+// media
+@import "media.scss";
+
+
+
+
 @import "fonts.scss";
 
 
 @import "layout.scss";
 
+
+
+// blocks
 @import "header.scss";
 @import "btns.scss";
 
@@ -15,3 +26,6 @@
 
 @import "whe_are.scss";
 @import "form.scss";
+@import "team_acordeon.scss";
+@import "map.scss";
+@import "footer.scss";
