--- a/CSS/SCSS/whe_are.scss
+++ b/CSS/SCSS/whe_are.scss
@@ -1,6 +1,6 @@
 
 .whe-are_title{
-  margin-bottom: 50px;
+  margin-bottom: rem(50px);
 
   h4{
     text-align: center;
@@ -9,7 +9,6 @@
 
 .reason__list{
   display: flex;
-align-items: center;
 }
 
 
@@ -18,6 +17,7 @@ align-items: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 2%;
   // width: 30%;
   // margin-right: 5%;
 }
@@ -27,23 +27,22 @@ align-items: center;
 }
 
 .reason__banner{
-  margin-bottom: 33px;
+  margin-bottom: rem(33px);
 }
 .reason__title{
   font-family: 'Lifehack';
-  font-size: 24px;
+  font-size: rem(24px);
   line-height: 1.17;
   letter-spacing: -0.6px;
   text-align: center;
   color: #2f3234;
-  width: 210px;
 
 }
 
   .reason__desc{
     opacity: 0.8;
     font-family: 'Ubuntu';
-    font-size: 14px;
+    font-size: rem(14px);
     font-weight: lighter;
     line-height: 1.71;
     letter-spacing: normal;
