--- a/CSS/SCSS/main.scss
+++ b/CSS/SCSS/main.scss
@@ -27,5 +27,6 @@
 @import "whe_are.scss";
 @import "form.scss";
 @import "team_acordeon.scss";
+@import "menu.scss";
 @import "map.scss";
 @import "footer.scss";
